--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
+				
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -121,7 +122,14 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<figure>
+					<blockquote> 
+						<em>
+					"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."	
+						</em>
+					</blockquote>
+					<figcaption>—Maxime Guibard, <cite>PDG de À vos fourchettes</cite></figcaption>
+				</figure>
 
 			</div>
 		</div>
