corrections diverses +images

--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html"
                 ><img
-                  src="img/la-chouette-agence.png"
-                  alt="atlanta web design logo"
+                  src="img/la-chouette-agence.webp"
+                  alt="logo la chouette agence, Lyon"
                   height="40"
               /></a>
               <button
@@ -169,7 +169,8 @@
           <div class="row">
             <div class="col-sm-12">
               <p class="text-center white">
-                La chouette agence - Agence web basée à Lyon.<br />
+                La chouette agence - 2 place Sathonay 69001
+                  Lyon
               </p>
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
