--- a/contact.html
+++ b/contact.html
@@ -101,12 +101,13 @@
                 <form
                   id="form_1"
                   novalidate
-                  success-msg="Your message has been sent."
-                  fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
+                  success-msg="Votre message a bien été envoyé."
+                  fail-msg="Il semblerait que le serveur ne réponde pas, excusez-nous!"
                 >
                   <div class="form-group">
                     <label> Nom </label>
-                    <input id="name" class="form-control" required />
+                    <input id="name" class="form-control" required aria-label="votre nom" aria-invalid="false"/>
+                    <div class="help-block"></div>
                   </div>
                   <div class="form-group">
                     <label> Adresse email </label>
