--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
           <div class="container bloc-lg">
             <div class="row">
               <div class="col-sm-12">
-                <h1 class="text-center hero-bloc-text tc-white">
+                <h1 class="text-center hero-bloc-text">
                   Parlons web design !
                 </h1>
-                <p class="text-center mg-lg tc-white tight-width-whitespace">
+                <p class="text-center mg-lg tight-width-whitespace">
                   Nous sommes ravis que vous souhaitiez collaborer avec notre
                   agence.<br />
                   Parlez-nous de votre projet en complétant le formulaire
@@ -107,16 +107,10 @@
                   <div class="form-group">
                     <label> Nom </label>
                     <input id="name" class="form-control" required aria-label="votre nom" aria-invalid="false"/>
-                    <div class="help-block"></div>
                   </div>
                   <div class="form-group">
                     <label> Adresse email </label>
-                    <input
-                      id="email"
-                      class="form-control"
-                      type="email"
-                      required
-                    />
+                    <input id="email" class="form-control" type="email" required aria-label="votre mail" aria-invalid="false"/>
                   </div>
                   <div class="form-group">
                     <label> Comment nous avez-vous connu ? </label>
@@ -125,6 +119,8 @@
                       type="email"
                       required
                       id="input_504"
+                      aria-label="indiquez comment vous nous connaissez"
+                      aria-invalid="false"
                     />
                   </div>
                   <div class="form-group">
@@ -137,6 +133,8 @@
                       rows="4"
                       cols="50"
                       required
+                      aria-label="Décrivez votre projet"
+                      aria-invalid="false"
                     ></textarea>
                   </div>
                   <button
