--- a/contact.html
+++ b/contact.html
@@ -167,10 +167,10 @@
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
-              <p class="text-center white">
+              <h3 class="text-center ">
                 La chouette agence - 2 place Sathonay 69001
                   Lyon
-              </p>
+              </h3>
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
