--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,7 @@
         >
           <div class="container bloc-lg">
             <div class="row">
+
               <div class="col-sm-12">
                 <h1 class="text-center hero-bloc-text">
                   Parlons web design !
@@ -174,28 +175,28 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#" title="twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#" title="facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#" title="dribbble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#" title="instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
