--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@
                   votre site, n’hésitez pas à nous contacter. Nous travaillerons
                   ensemble pour créer des sites beau et bien structurés, qui
                   seront facilement trouvable sur les moteurs de recherche.
-                  <br /><br /><a class="ltc-white bold-link" href="contact.html"
-                    >Contactez notre équipe</a
-                  ><br />
+                  <br /><br /><a
+                    href="contact.html"
+                    class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                    id="cta-hero">
+                    Contactez nos équipes</a>
                 </p>
               </div>
             </div>
