retrait id cta hero sur button

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <a
                     href="contact.html"
                     class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-                    id="cta-hero"
+                    
                     >Contact</a
                   >
                 </div>
@@ -200,8 +200,7 @@
                   seront facilement trouvable sur les moteurs de recherche.
                   <br /><br /><a
                     href="contact.html"
-                    class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-                    id="cta-hero">
+                    class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">
                     Contactez nos équipes</a>
                 </p>
               </div>
