--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,7 @@
                 </h1>
                 <p class="text-center mg-lg tight-width-whitespace white">
                   Nous sommes ravis que vous souhaitiez collaborer avec notre
-                  agence.<br />
-                  Parlez-nous de votre projet en complétant le formulaire
-                  ci-dessous.
+                  agence.
                 </p>
               </div>
             </div>
@@ -96,14 +94,15 @@
 
         <!-- bloc-7 -->
         <section class="bloc bgc-white l-bloc" id="bloc-7">
+            <h2 class="text-center">Parlez-nous de votre projet de design en complétant le formulaire ci-dessous</h2>
           <div class="container bloc-lg">
+          
             <div class="row">
               <div class="col-sm-6">
+                
                 <form
                   id="form_1"
                   novalidate
-                  success-msg="Votre message a bien été envoyé."
-                  fail-msg="Il semblerait que le serveur ne réponde pas, excusez-nous!"
                 >
                   <div class="form-group">
                     <label> Nom </label>
