--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
+    
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
+    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
@@ -92,7 +92,6 @@
                   <a
                     href="contact.html"
                     class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-                    
                     >Contact</a
                   >
                 </div>
@@ -200,8 +199,10 @@
                   seront facilement trouvable sur les moteurs de recherche.
                   <br /><br /><a
                     href="contact.html"
-                    class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">
-                    Contactez nos équipes</a>
+                    class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                  >
+                    Contactez nos équipes</a
+                  >
                 </p>
               </div>
             </div>
@@ -349,8 +350,8 @@
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="#" title="twitter"
-                      ><span class="fa fa-twitter icon-md"></span
-                    > </a>
+                      ><span class="fa fa-twitter icon-md"></span>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
